--- a/files/data/settings.json
+++ b/files/data/settings.json
@@ -1,9 +1,10 @@
 {
     "player_name": "CHEMISTER",
     "password": "heslo123",
+    "heigh-score": 0,
     "fov": 0.4,
-    "volume": 0.2,
+    "volume": 0.5,
     "default_fullscreen": false,
-    "server_ip_address": "10.2.11.100",
+    "server_ip_address": "192.168.100.48",
     "server_port": 5432
 }
