--- a/files/data/settings.json
+++ b/files/data/settings.json
@@ -1,10 +1,10 @@
 {
     "player_name": "CHEMISTER",
     "password": "heslo123",
-    "heigh-score": 0,
+    "heigh-score": 6000,
     "fov": 0.4,
-    "volume": 0.5,
+    "volume": 0.3,
     "default_fullscreen": false,
-    "server_ip_address": "192.168.100.48",
+    "server_ip_address": "localhost",
     "server_port": 5432
 }
