--- a/files/data/settings.json
+++ b/files/data/settings.json
@@ -4,7 +4,7 @@
     "heigh-score": 6000,
     "fov": 0.4,
     "volume": 0.3,
-    "default_fullscreen": false,
+    "default_fullscreen": true,
     "server_ip_address": "localhost",
     "server_port": 5432
 }
